// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectedElementContext should inspect the currently selected element: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "a": 1,
    "b": "abc"
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 1: Initially inspect element 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {}
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 2: Inspect props.nestedObject.a 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {
        "b": {
          "c": {}
        }
      }
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 3: Inspect props.nestedObject.a.b.c 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {
        "b": {
          "c": [
            {
              "d": {}
            }
          ]
        }
      }
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should not dehydrate nested values until explicitly requested: 4: Inspect props.nestedObject.a.b.c.0.d 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "nestedObject": {
      "a": {
        "b": {
          "c": [
            {
              "d": {
                "e": {}
              }
            }
          ]
        }
      }
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should support complex data types: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "html_element": {},
    "fn": {},
    "symbol": {},
    "react_element": {},
    "array_buffer": {},
    "typed_array": {},
    "date": {}
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should support custom objects with enumerable properties and getters: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "data": {
      "_number": 42,
      "number": 42
    }
  },
  "state": null
},
}
`;

exports[`InspectedElementContext should support simple data types: 1: Initial inspection 1`] = `
Object {
  "id": 2,
  "type": "full-data",
  "value": {
  "id": 2,
  "owners": null,
  "context": {},
  "events": null,
  "hooks": null,
  "props": {
    "boolean_false": false,
    "boolean_true": true,
    "infinity": null,
    "integer_zero": 0,
    "integer_one": 1,
    "float": 1.23,
    "string": "abc",
    "string_empty": "",
    "nan": null,
    "value_null": null
  },
  "state": null
},
}
`;
